tests/snapshots/examples_fixtures/advanced__using_list_module.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/using_list_module.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/using_list_module.flx:12:5
   |
12 |     fold(lst, 0, /(acc, x) -> acc + x)
   |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/using_list_module.flx:99:17
   |
99 |     let evens = filter(nums, /x -> x % 2 == 0)
   |                 ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/advanced/using_list_module.flx:100:5
    |
100 |     print("Evens:", evens)
    |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/using_list_module.flx:102:19
    |
102 |     let squared = map(evens, /x -> x * x)
    |                   ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/advanced/using_list_module.flx:103:5
    |
103 |     print("Squared evens:", squared)
    |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/using_list_module.flx:129:18
    |
129 |     let grades = fold(paired, {}, /(acc, pair) -> put(acc, to_string(first(pair)), grade(last(pair))))
    |                  ^^^^

Hint:
  Define it first: let fold = ...;

Found 6 errors.
== stdout ==
<not executed>
